# ShortUrl.ManagementGui/OpenAPIs/swagger.json
@@ -17,11 +17,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "type": "array",
-                  "items": {
-                    "$ref": "#/components/schemas/ShortUrlModel"
-                  },
-                  "nullable": true
+                  "$ref": "#/components/schemas/ModelsAndClaims"
                 }
               }
             }
@@ -182,6 +178,40 @@
           "url": {
             "maxLength": 1000,
             "type": "string"
+          }
+        },
+        "nullable": true
+      },
+      "MyClaim": {
+        "type": "object",
+        "properties": {
+          "type": {
+            "type": "string",
+            "nullable": true
+          },
+          "value": {
+            "type": "string",
+            "nullable": true
+          }
+        },
+        "nullable": true
+      },
+      "ModelsAndClaims": {
+        "type": "object",
+        "properties": {
+          "shortUrlModels": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/ShortUrlModel"
+            },
+            "nullable": true
+          },
+          "myClaims": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/MyClaim"
+            },
+            "nullable": true
           }
         },
         "nullable": true
