# ShortUrl.UrlManagementApi/Controllers/ManagementController.cs
@@ -1,5 +1,6 @@
 ﻿using System;
 using System.Collections.Generic;
+using System.Linq;
 using System.Net;
 using System.Threading.Tasks;
 using System.Web.Http.Description;
@@ -19,23 +20,32 @@ namespace ShortUrl.UrlManagementApi.Controllers
         private readonly IUrlRepository _repository;
         private readonly ILogger<ManagementController> _logger;
 
+        public class MyClaim
+        {
+            public string Type { get; set; }
+            public string Value { get; set; }
+        }
+
         public ManagementController(IUrlRepository repository, ILogger<ManagementController> logger)
         {
             _repository = repository ?? throw new ArgumentNullException(nameof(repository));
             _logger = logger ?? throw new ArgumentNullException(nameof(logger));
         }
 
-        [HttpGet(Name ="GetAll")]
+        [HttpGet(Name = "GetAll")]
         [Produces("application/json")]
-        [ProducesResponseType(StatusCodes.Status200OK, Type = typeof(IEnumerable<ShortUrlModel>))]
+        [ProducesResponseType(StatusCodes.Status200OK, Type = typeof(ModelsAndClaims))]
         public async Task<IActionResult> GetAll()
         {
             var shortUrlModels = await _repository.GetAll();
+            var claims = from c in User.Claims select new MyClaim { Type = c.Type, Value = c.Value };
 
-            return new JsonResult(shortUrlModels);
+            var response = new ModelsAndClaims { ShortUrlModels = shortUrlModels, MyClaims = claims };
+
+            return new JsonResult(response);
         }
 
-        [HttpGet("{id}", Name ="GetById")]
+        [HttpGet("{id}", Name = "GetById")]
         [Produces("application/json")]
         [ProducesResponseType(StatusCodes.Status200OK, Type = typeof(ShortUrlModel))]
         [ProducesResponseType(StatusCodes.Status404NotFound)]
@@ -53,7 +63,7 @@ namespace ShortUrl.UrlManagementApi.Controllers
             }
         }
 
-        [HttpPost(Name ="Add")]
+        [HttpPost(Name = "Add")]
         [Produces("application/json")]
         [ProducesResponseType(StatusCodes.Status201Created, Type = typeof(ShortUrlModel))]
         [ProducesResponseType(StatusCodes.Status400BadRequest)]
@@ -71,7 +81,7 @@ namespace ShortUrl.UrlManagementApi.Controllers
             return Created(shortUrlModel.Key, shortUrlModel);
         }
 
-        [HttpDelete("{id?}", Name ="DeleteById")]
+        [HttpDelete("{id?}", Name = "DeleteById")]
         [ProducesResponseType(StatusCodes.Status204NoContent)]
         [ProducesResponseType(StatusCodes.Status404NotFound)]
         public async Task<IActionResult> DeleteById(long? id)
